fix rocket horizontal scroll

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2869,6 +2869,7 @@ button:disabled,
     width: 100%;
     top: 800px;
     z-index: -1;
+    overflow-x: hidden;
 }
 
 .rocket-img {
